<?xml version="1.0" encoding="utf-8"?>

<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
             android:layout_width="match_parent"
             android:layout_height="match_parent">

    <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ones"
                android:id="@+id/textView" android:layout_column="0" android:textSize="30sp"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/unused_score"
                android:id="@+id/ones_value_textview" android:layout_column="1" android:textSize="30sp"
                android:layout_marginLeft="10dp" android:layout_marginRight="10dp" android:tag="0"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/three_of_a_kind"
                android:id="@+id/textView7" android:layout_column="2" android:textSize="30sp"/>
        <TextView
                android:id="@+id/three_of_a_kind_value_textview" android:layout_column="3" android:textSize="30sp"
                android:text="@string/unused_score"
                android:layout_marginLeft="10dp" android:layout_marginRight="10dp" android:tag="7"/>
    </TableRow>
    <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/twos"
                android:id="@+id/textView1" android:layout_column="0" android:textSize="30sp"/>
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                  android:text="@string/unused_score" android:id="@+id/twos_value_textview" android:layout_column="1"
                  android:textSize="30sp" android:layout_marginLeft="10dp" android:layout_marginRight="10dp"
                  android:tag="1"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/four_of_a_kind"
                android:id="@+id/textView8" android:layout_column="2" android:textSize="30sp"/>
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                  android:text="@string/unused_score" android:id="@+id/four_of_a_kind_value_textview" android:layout_column="3"
                  android:textSize="30sp" android:layout_marginLeft="10dp" android:layout_marginRight="10dp"
                  android:tag="8"/>
    </TableRow>
    <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/threes"
                android:id="@+id/textView2" android:layout_column="0" android:textSize="30sp"/>
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                  android:text="@string/unused_score" android:id="@+id/threes_value_textview" android:layout_column="1"
                  android:textSize="30sp" android:layout_marginLeft="10dp" android:layout_marginRight="10dp"
                  android:tag="2"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/full_house"
                android:id="@+id/textView9" android:layout_column="2" android:textSize="30sp"/>
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                  android:text="@string/unused_score" android:id="@+id/full_house_value_textview" android:layout_column="3"
                  android:textSize="30sp" android:layout_marginLeft="10dp" android:layout_marginRight="10dp"
                  android:tag="9"/>
    </TableRow>
    <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fours"
                android:id="@+id/textView3" android:layout_column="0" android:textSize="30sp"/>
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                  android:text="@string/unused_score" android:id="@+id/fours_value_textview" android:layout_column="1"
                  android:textSize="30sp" android:layout_marginLeft="10dp" android:layout_marginRight="10dp"
                  android:tag="3"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sm_straight"
                android:id="@+id/textView10" android:layout_column="2" android:textSize="30sp"/>
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                  android:text="@string/unused_score" android:id="@+id/sm_straight_value_textview" android:layout_column="3"
                  android:textSize="30sp" android:layout_marginLeft="10dp" android:layout_marginRight="10dp"
                  android:tag="10"/>
    </TableRow>
    <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fives"
                android:id="@+id/textView4" android:layout_column="0" android:textSize="30sp"/>
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                  android:text="@string/unused_score" android:id="@+id/fives_value_textview" android:layout_column="1"
                  android:textSize="30sp" android:layout_marginLeft="10dp" android:layout_marginRight="10dp"
                  android:tag="4"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lg_straight"
                android:id="@+id/textView11" android:layout_column="2" android:textSize="30sp"/>
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                  android:text="@string/unused_score" android:id="@+id/lg_straight_value_textview" android:layout_column="3"
                  android:textSize="30sp" android:layout_marginLeft="10dp" android:layout_marginRight="10dp"
                  android:tag="11"/>
    </TableRow>
    <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sixes"
                android:id="@+id/textView5" android:layout_column="0" android:textSize="30sp"/>
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                  android:text="@string/unused_score" android:id="@+id/sixes_value_textview" android:layout_column="1"
                  android:textSize="30sp" android:layout_marginLeft="10dp" android:layout_marginRight="10dp"
                  android:tag="5"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/yahtzee"
                android:id="@+id/textView12" android:layout_column="2" android:textSize="30sp"/>
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                  android:text="@string/unused_score" android:id="@+id/yahtzee_value_textview" android:layout_column="3"
                  android:textSize="30sp" android:layout_marginLeft="10dp" android:layout_marginRight="10dp"
                  android:tag="12"/>
    </TableRow>
    <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent" android:gravity="center_vertical">
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/upper_bonus"
                android:id="@+id/textView6" android:layout_column="0" android:textSize="30sp"/>
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                  android:text="@string/unused_score" android:id="@+id/upper_total_value_textview" android:layout_column="1"
                  android:textSize="30sp" android:layout_marginLeft="10dp" android:layout_marginRight="10dp"
                  android:tag="6"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="B/Yahtzee"
                android:id="@+id/textView14" android:layout_column="2" android:textSize="30sp"
                />
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/unused_score"
                android:id="@+id/textView15" android:layout_column="3" android:textSize="30sp"
                android:gravity="center_horizontal" android:tag="13"/>
    </TableRow>
    <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/chance"
                android:id="@+id/textView13" android:layout_column="2" android:textSize="30sp"/>
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                  android:text="@string/unused_score" android:id="@+id/chance_value_textview" android:layout_column="3"
                  android:textSize="30sp" android:layout_marginLeft="10dp" android:layout_marginRight="10dp"
                  android:tag="14"/>
    </TableRow>
    <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent" android:gravity="center_horizontal"
            android:background="@drawable/yahtzee_cell_background" android:layout_marginTop="10dp">
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Total"
                android:id="@+id/textView21" android:layout_column="0" android:textSize="30sp" android:layout_span="1"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/unused_score"
                android:id="@+id/textView22" android:layout_column="1" android:layout_span="1" android:textSize="30sp"
                android:gravity="center" android:tag="15"/>
    </TableRow>
</TableLayout>